--- a/PopularMoviesApp/app/src/main/res/layout/item_movie_image.xml
+++ b/PopularMoviesApp/app/src/main/res/layout/item_movie_image.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ivMovie"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:contentDescription="@null"
-    android:layout_margin="2dp"/>
+    android:focusable="true"
+    android:layout_margin="2dp"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/ivMovie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:clickable="true"
+        android:contentDescription="@null"
+        android:focusable="true"
+        android:scaleType="fitCenter" />
+</LinearLayout>
